--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
             <div class="destination" id="barcelona">
                 <h2>Berlin</h2>
             </div>
+            <div class="destination" id="Santa Monica">
+                <h2>Santa Monica</h2>
+            </div>
+
         </div>
     </div>
 
